# pinkbocchi

./: .gitignore  AudioControl.qml  CMakeLists.txt  PlayList.qml  PlaybackControl.qml  PlayerMenuBar.qml  main.cpp  main.qml
qml/: AudioControl.qml  MetadataInfo.qml  PlayList.qml  PlaybackControl.qml  PlaybackSeekControl.qml  PlayerMenuBar.qml  TracksInfo.qml  main.qml
